--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ a:hover{
   transition: 0.3s;
 }
 
-header{
+header, .title{
   border-bottom: 0.125rem solid;
   border-image: linear-gradient(to right,var(--primary2),var(--primary3)) 1;
   border-radius: 0.0625rem;
@@ -39,11 +39,12 @@ header{
   gap: 2rem;
 }
 
-.section{  
+.zone{  
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 4rem;
+  flex-wrap: wrap;
 }
 
 .textContent{
@@ -56,16 +57,16 @@ header{
   font-size: 1.5rem;
 }
 
-.halfText, .halfImages{
+.halfLeft, .halfRight{
   width: 40%;
 }
 
-.halfText{
+.halfLeft{
   margin-right: 10%;
   text-align: end;
 }
 
-.halfImages{
+.halfRight{
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -73,6 +74,11 @@ header{
   margin-left: 10%;
 }
 
+.paragraphs {
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
 .language{
   width: 30%;
   max-width: 133px;
@@ -95,100 +101,36 @@ header{
   border-radius: 0.0625rem;
 }
 
-/******About - Start******/
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: var(--primary1);
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: var(--primary4);
-}
-
-/* Caption text */
-.text {
-  color: var(--primary2);
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
+.title{
+  display: block;
+  font-size: 1.25rem;
   width: 100%;
-  text-align: center;
+  margin-bottom: 2rem;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: var(--primary2);
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+.photo{
+  width: 20rem;
+  border-radius: 10rem;
 }
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: var(--primary1);
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
+.download{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  height: 3rem;
+  border-radius: 0.5rem;
+  font-family: 'Roboto Mono';
+  font-weight: 600;
+  font-size: 1rem;
   background-color: var(--primary2);
+  color: var(--primary3);
+  padding: 1rem 2rem;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+a:hover{
+  color: var(--primary3);
+  background-color: var(--primary1);
+  border-radius: 0.5rem;
+  transition: 0.3s;
 }
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-/******About - End******/
