--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ header, .title{
 }
 
 .paragraphs {
+  display: flex;
   justify-content: center;
   flex-direction: column;
   gap: 1rem;
@@ -122,7 +123,7 @@ header, .title{
   border-radius: 0.5rem;
   font-family: 'Roboto Mono';
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 1.25rem;
   background-color: var(--primary2);
   color: var(--primary3);
   padding: 1rem 2rem;
@@ -133,4 +134,72 @@ a:hover{
   background-color: var(--primary1);
   border-radius: 0.5rem;
   transition: 0.3s;
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: calc(50% - 1rem) calc(50% - 1rem);
+  grid-template-rows: 25% 25% 25% 25%;
+  height: fit-content;
+  gap: 2rem;
+}
+
+.cellImg{
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
+  min-height: 20rem;
+}
+
+.projectName{
+  color: var(--primary1);
+  font-family: 'Indie Flower';
+  font-size: 1.25rem;
+}
+
+#img1{
+  background-image: url("../img/tipCalculator.png");
+  grid-column: 1/2;
+  grid-row: 1/2;
+  width: 100%;
+}
+
+#text1{
+  grid-column: 2/2;
+  grid-row: 1/2;
+}
+
+#img2{
+  background-image: url("../img/interactivePricingComponent.png");
+  grid-column: 2/2;
+  grid-row: 2/3;
+}
+
+#text2{
+  grid-column: 1/2;
+  grid-row: 2/3;
+  text-align: end;
+}
+
+#img3{
+  background-image: url("../img/introComponent.png");
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+
+#text3{
+  grid-column: 2/2;
+  grid-row: 3/4;
+}
+
+#img4{
+  background-image: url("../img/launchCountdownTimer.png");
+  grid-column: 2/2;
+  grid-row: 4/4;
+}
+
+#text4{
+  grid-column: 1/2;
+  grid-row: 4/4;
+  text-align: end;
 }
