--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ a:hover{
   gap: 2rem;
 }
 
+.menuLink{
+  padding: 0.5rem;
+}
+
 #home{
   padding-top: 7rem;
 }
@@ -163,10 +167,17 @@ a:hover{
 }
 
 .cellImg{
-  background-repeat: no-repeat;
-  background-size:contain;
-  background-position: center;
-  min-height: 20rem;
+  display: flex;
+  justify-content: center;
+}
+
+.imgLink:hover{
+  background-color: var(--primary3);
+}
+
+.img{
+  height: 25rem;
+  border-radius: 0.5rem;
 }
 
 .projectName{
@@ -175,22 +186,22 @@ a:hover{
   font-size: 1.25rem;
 }
 
-#img1{
-  background-image: url("../img/tipCalculator.png");
+#imgHolder1{
   grid-column: 1/2;
   grid-row: 1/2;
   width: 100%;
 }
+
 
 #text1{
   grid-column: 2/2;
   grid-row: 1/2;
 }
 
-#img2{
-  background-image: url("../img/interactivePricingComponent.png");
+#imgHolder2{
   grid-column: 2/2;
   grid-row: 2/3;
+  width: 100%;
 }
 
 #text2{
@@ -199,10 +210,10 @@ a:hover{
   text-align: end;
 }
 
-#img3{
-  background-image: url("../img/introComponent.png");
+#imgHolder3{
   grid-column: 1/2;
   grid-row: 3/4;
+  width: 100%;
 }
 
 #text3{
@@ -210,11 +221,10 @@ a:hover{
   grid-row: 3/4;
 }
 
-#img4{
-  background-image: url("../img/launchCountdownTimer.png");
-  background-size: 80%;
+#imgHolder4{
   grid-column: 2/2;
   grid-row: 4/4;
+  width: 100%;
 }
 
 #text4{
