--- a/css/colors.css
+++ b/css/colors.css
@@ -2,5 +2,6 @@
   --primary1: #E3DCD2;
   --primary2: #CC8B65;
   --primary3: #013328;
+  --primary3-translucid:rgba(1, 51, 40, 0.98);
   --primary4: #100C0D;
 }
