--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a:hover{
   border-color: var(--primary2);
   border-radius: 0.0625rem;
   width: 100%;
-  background: var(--primary3);
+  background: var(--primary3-translucid);
   padding-bottom: 1rem;
 }
 
@@ -77,7 +77,7 @@ a:hover{
 }
 
 .name{
-  margin-top: 0.25rem;
+  line-height: 2.6;
   font-family: 'Montserrat';
   font-size: 1.5rem;
 }
@@ -131,6 +131,7 @@ a:hover{
 }
 
 .title{
+  font-family: 'Montserrat';
   display: block;
   font-size: 1.25rem;
   width: 100%;
